Changed to png picture so they render on github.

--- a/Session_1/1.Introduction_to_tree_sequences.ipynb
+++ b/Session_1/1.Introduction_to_tree_sequences.ipynb
@@ -109,7 +109,7 @@
     "\n",
     "Suppose we have a sample of 4 alleles, each from a different DNA sequence, and we wish to understand their history. We could represent this history with a tree like this one:\n",
     "\n",
-    "<p><img src=\"pics/simple-tree.pdf\" alt=\"\" width=\"45%\"/></p>\n",
+    "<p><img src=\"pics/simple-tree.png\" alt=\"\" width=\"45%\"/></p>\n",
     " \n",
     "The 4 *sample nodes* are those labelled 0 - 3 at the leaves of the tree. The other nodes are *ancestral nodes*: these are the alleles held by individuals that are ancestral to the sample.\n",
     "\n",
@@ -124,7 +124,7 @@
     "\n",
     "The sample history encoded by a tree at a single base will typically also apply to some interval of neighbouring bases. However, due to recombinations in the history of the sample, the genealogy will typically be different at more distant locations on the chromosome, and so must be represented by a different tree. Thus, the history of a sample of sequences can be encoded in a sequence of trees - a tree sequence!\n",
     "\n",
-    "<p><img src=\"pics/tree-sequence.pdf\" alt=\"\" width=\"70%\"/></p>\n",
+    "<p><img src=\"pics/tree-sequence.png\" alt=\"\" width=\"70%\"/></p>\n",
     "\n",
     "The endpoints of the intervals are the locations at which recombination has occurred in the history of the sample. \n",
     "\n",
@@ -354,15 +354,15 @@
     "\n",
     "Our example tree sequence can be represented with the following NodeTable and EdgeTable:\n",
     "\n",
-    "<p><img src=\"pics/tree-sequence-with-tables.pdf\" alt=\"\" width=\"40%\"/></p>\n",
-    "<p><img src=\"pics/tree-sequence.pdf\" alt=\"\" width=\"70%\"/></p>\n",
+    "<p><img src=\"pics/tree-sequence-with-tables.png\" alt=\"\" width=\"40%\"/></p>\n",
+    "<p><img src=\"pics/tree-sequence.png\" alt=\"\" width=\"70%\"/></p>\n",
     "\n",
     "There are other tables like Mutations, Sites, Populations, etc. that we will see later in this workshop.\n",
     "\n",
     "Any topological feature that is common to several trees must only be recorded once in the corresponding collection of tables. For instance, all of the trees in our example tree sequence have an edge joining nodes 1 and 5, and this edge is recorded just once in the table.\n",
     "\n",
-    "<p><img src=\"pics/tables-with-highlights.pdf\" alt=\"\" width=\"25%\"/></p>\n",
-    "<p><img src=\"pics/tree-sequence-with-highlights.pdf\" alt=\"\" width=\"70%\"/></p>\n"
+    "<p><img src=\"pics/tables-with-highlights.png\" alt=\"\" width=\"25%\"/></p>\n",
+    "<p><img src=\"pics/tree-sequence-with-highlight.png\" alt=\"\" width=\"70%\"/></p>\n"
    ]
   },
   {
@@ -473,7 +473,7 @@
     "\n",
     "We need to store the genomic location of each variant site, as well as the lineage of the tree affected by the mutation. (This corresponds to an edge in the tree sequence). The subsample of haplotypes with the mutated type is simply the subset of nodes in the part of the tree that descends from the mutation.\n",
     "\n",
-    "<p><img src=\"pics/tree-sequence-with-mutations.pdf\" alt=\"\" width=\"70%\"/></p>"
+    "<p><img src=\"pics/tree-sequence-with-mutations.png\" alt=\"\" width=\"70%\"/></p>"
    ]
   },
   {
@@ -482,7 +482,7 @@
    "source": [
     "This information is encoded with two extra tables: a site table showing the locations of the variant sites, and a mutations table showing the lineage of the tree affected by the mutation.\n",
     "\n",
-    "<p><img src=\"pics/tables-with-mutations.pdf\" alt=\"\" width=\"70%\"/></p>"
+    "<p><img src=\"pics/tables-with-mutations.png\" alt=\"\" width=\"70%\"/></p>"
    ]
   },
   {
@@ -708,7 +708,7 @@
     "\n",
     "(Maybe not worth going into this here?)\n",
     "\n",
-    "<p><img src=\"pics/local-ancestry-in-trees.pdf\" alt=\"\" width=\"20%\"/></p>"
+    "<p><img src=\"pics/local-ancestry-in-trees.png\" alt=\"\" width=\"20%\"/></p>"
    ]
   },
   {
@@ -847,7 +847,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
