--- a/Session_1/1.Introduction_to_tree_sequences.ipynb
+++ b/Session_1/1.Introduction_to_tree_sequences.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 0. An introduction to simulations with msprime\n",
+    "# An introduction to simulations with msprime\n",
     "\n",
     "We've split this workshop into three parts:\n",
     " \n",
@@ -23,11 +23,7 @@
     "[1] Kelleher, J., Etheridge, A. M., & McVean, G. (2016). Efficient Coalescent Simulation and Genealogical Analysis for Large Sample Sizes. PLOS Computational Biology, 12(5), e1004842. https://doi.org/10.1371/journal.pcbi.1004842\n",
     " \n",
     " #### Creative Commons Licence\n",
-    " These materials were designed for SMBE Speciation 2019.\n",
-    " \n",
-    " All materials in this (inc pictures) can be re-used under some appropriate licence?\n",
-    " \n",
-    " How to cite these materials?"
+    " These materials were designed for SMBE Speciation 2019. They can be re-used, but please say where you got them from!"
    ]
   },
   {
@@ -39,14 +35,11 @@
     "This notebook provides a 30 minute introduction to the tree sequence data structure that underlies `msprime`, and shows you how to use basic features of the `tskit` package.\n",
     "\n",
     "### Things we'll cover in this notebook\n",
-    " - 1.1 Why use tree sequences? \n",
-    " - 1.2 Trees\n",
-    " - 1.3 Tree sequences\n",
-    " - 1.4 Table encoding\n",
-    " - 1.5 Storing variation\n",
-    " - 1.6 Populations\n",
-    " \n",
-    "(It takes me about 10 minutes to cover this material with just slides. So - perhaps aim for - 10 minutes of 'lecture', 8 minutes of how to do things with `tskit`, 8 minutes of 'practical'.)"
+    " - 1.1 [Why use tree sequences?](#why_use_ts) \n",
+    " - 1.2 [Trees](#trees)\n",
+    " - 1.3 [Tree sequences](#tree_sequences)\n",
+    " - 1.4 [Table encoding](#table_representation)\n",
+    " - 1.5 [Storing variation](#variation)\n"
    ]
   },
   {
@@ -62,6 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='why_use_ts'></a>\n",
     "## 1.1 Why use tree sequences?"
    ]
   },
@@ -101,6 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='trees'></a>\n",
     "## 1.2 Trees\n",
     "\n",
     "At a single nucleotide base, the genealogy of a sample at can be represented by a single tree.\n",
@@ -120,6 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='tree_sequences'></a>\n",
     "## 1.3 Tree sequences\n",
     "\n",
     "The sample history encoded by a tree at a single base will typically also apply to some interval of neighbouring bases. However, due to recombinations in the history of the sample, the genealogy will typically be different at more distant locations on the chromosome, and so must be represented by a different tree. Thus, the history of a sample of sequences can be encoded in a sequence of trees - a tree sequence!\n",
@@ -348,6 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='table_representation'></a>\n",
     "## 1.4 Table representation\n",
     "\n",
     "It turns out that each tree sequence object can be entirely specified by a set of tables. Instead of storing each tree individually, each individual topological feature is stored as a row in a relevant table.\n",
@@ -467,7 +464,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Variation\n",
+    "<a id='variation'></a>\n",
+    "## 1.5 Variation\n",
     " \n",
     "Variation is a consequence of mutations in the history of the sample. Thus, by adding some information about mutations to our tree sequences, we can use them to encode full haplotype data for each of our samples. \n",
     "\n",
@@ -702,132 +700,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Population structure\n",
-    "\n",
-    "Tree sequences can also be simulated under detailed models of migration and population structure. The tree sequences and associated tables produced under these scenarios have a few extra features: importantly, each node will also be given a population label.\n",
-    "\n",
-    "(Maybe not worth going into this here?)\n",
-    "\n",
-    "<p><img src=\"pics/local-ancestry-in-trees.png\" alt=\"\" width=\"20%\"/></p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Exercise:** Trees and tree sequence objects have many useful inbuilt methods and attributes. Have a play around with these in the time before the next part of the workshop.\n",
     "\n",
     "See the official documentation for [tree sequences](https://tskit.readthedocs.io/en/latest/python-api.html?highlight=SVG#tskit.TreeSequence) and [trees](https://tskit.readthedocs.io/en/latest/python-api.html?highlight=SVG#tskit.Tree) for a fuller description of these."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', '_ll_tree_sequence', 'aslist', 'at', 'at_index', 'breakpoints', 'diffs', 'dump', 'dump_tables', 'dump_text', 'edge_diffs', 'edges', 'edgesets', 'file_uuid', 'first', 'genealogical_nearest_neighbours', 'genotype_matrix', 'get_ll_tree_sequence', 'get_num_mutations', 'get_num_nodes', 'get_num_records', 'get_num_sites', 'get_num_trees', 'get_pairwise_diversity', 'get_population', 'get_sample_size', 'get_samples', 'get_sequence_length', 'get_time', 'haplotypes', 'individual', 'individuals', 'last', 'll_tree_sequence', 'load', 'load_tables', 'mean_descendants', 'migrations', 'mutation', 'mutations', 'newick_trees', 'node', 'nodes', 'num_edges', 'num_individuals', 'num_migrations', 'num_mutations', 'num_nodes', 'num_populations', 'num_provenances', 'num_samples', 'num_sites', 'num_trees', 'pairwise_diversity', 'population', 'populations', 'provenance', 'provenances', 'records', 'sample_size', 'samples', 'sequence_length', 'simplify', 'site', 'sites', 'tables', 'trees', 'variants', 'write_vcf']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dir(ts))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10.0"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ts.sequence_length"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['_Tree__build_newick', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', '_inorder_traversal', '_levelorder_traversal', '_ll_tree', '_postorder_traversal', '_preorder_traversal', '_sample_generator', '_tree_sequence', 'branch_length', 'children', 'clear', 'copy', 'draw', 'first', 'get_branch_length', 'get_children', 'get_index', 'get_interval', 'get_leaves', 'get_length', 'get_mrca', 'get_num_leaves', 'get_num_mutations', 'get_num_samples', 'get_num_tracked_leaves', 'get_num_tracked_samples', 'get_parent', 'get_parent_dict', 'get_population', 'get_root', 'get_sample_size', 'get_time', 'get_tmrca', 'get_total_branch_length', 'index', 'interval', 'is_descendant', 'is_internal', 'is_leaf', 'is_sample', 'last', 'leaves', 'left_child', 'left_root', 'left_sample', 'left_sib', 'length', 'mrca', 'mutations', 'newick', 'next', 'next_sample', 'nodes', 'num_mutations', 'num_nodes', 'num_roots', 'num_samples', 'num_sites', 'num_tracked_samples', 'parent', 'parent_dict', 'population', 'prev', 'right_child', 'right_sample', 'right_sib', 'root', 'roots', 'sample_size', 'samples', 'seek', 'seek_index', 'sites', 'span', 'time', 'tmrca', 'total_branch_length', 'tree_sequence']\n"
-     ]
-    }
-   ],
-   "source": [
-    "tree = ts.first()\n",
-    "print(dir(tree))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12.8"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tree.total_branch_length"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Further references\n"
    ]
   }
  ],
