Revised some code to use the new draw_svg method.

--- a/Session_1/1.Introduction_to_tree_sequences.ipynb
+++ b/Session_1/1.Introduction_to_tree_sequences.ipynb
@@ -10,7 +10,7 @@
     " \n",
     " 1. Introduction to tree sequences (Georgia)\n",
     " 2. Introduction to simulating with `msprime` (Georgia)\n",
-    " 3. Calculating population genetics statistics with simulated datasets (Jerome)\n",
+    " 3. Processing simulation results (Jerome)\n",
     "\n",
     "#### Main reference\n",
     "\n",
@@ -68,8 +68,8 @@
     "Because of this, you are probably used to storing your data in a compressed format, and decompressing it only when you need to perform analyses or query the data. Doing this can be time-consuming and computationally expensive, however.\n",
     "\n",
     "### The key idea\n",
-    "Common haplotypes in a sample are often simply a consequence of some common history. Thus, if you know this history (as we always do in simulations!), storing it directly is often more convenient and efficient than storing the raw haplotypes.  \n",
-    "A *tree sequence* is an encoding of a complete genealogy for a sample of genomes at each genomic location  [1].\n",
+    "Common haplotypes in a sample are often simply a consequence of some common history. So if we know this history (as we always do in simulations!), storing it directly is often more convenient and efficient than storing the raw haplotypes.  \n",
+    "A *tree sequence* is an encoding of a complete genealogy for a sample of chromosomes at each chromosomal location  [1].\n",
     "They offer a few benefits to population geneticists compared with traditional genetic file formats:\n",
     "\n",
     "- They can store large simulated datasets extremely compactly. (Often >100 of times smaller than VCFs for real-sized datasets!) \n",
@@ -112,11 +112,11 @@
     " - [tskit: a toolkit for tree sequences](#tree_sequences:tskit)\n",
     " - [Iterating through tree sequences](#tree_sequences:iteration)\n",
     "\n",
-    "The sample history encoded by a tree at a single base will typically also apply to some interval of neighbouring bases. However, due to recombinations in the history of the sample, the genealogy will typically be different at more distant locations on the chromosome, and so must be represented by a different tree. Thus, the history of a sample of sequences can be encoded in a sequence of trees - a tree sequence!\n",
+    "The sample history encoded by a tree at a single base will typically also apply to some interval of neighbouring bases. However, due to recombinations in the history of the sample, the genealogy will typically be different at more distant locations on the chromosome, and so must be represented by a different tree. Thus, the history of a sample of sequences can be encoded in a sequence of trees - *a tree sequence*!\n",
     "\n",
     "<p><img src=\"pics/tree-sequence.png\" alt=\"\" width=\"70%\"/></p>\n",
     "\n",
-    "The endpoints of the intervals are the locations at which recombination has occurred in the history of the sample. \n",
+    "The endpoints of the intervals are the locations where recombination has occurred in the history of the sample. \n",
     "\n",
     "Notice that the adjacent trees look very similar to each other. This makes sense: each recombination should correspond to a single \"tree edit\" (or \"subtree-prune-and-regraft\" operation). Because these recombinations are specific to particular lineages, many genealogical relationships are unaffected by a given recombination. This means that topological features are often shared over many neighbouring trees.\n"
    ]
@@ -130,7 +130,7 @@
     "\n",
     "`tskit` is a Python package with a bunch of useful software tools for working with tree sequences. Online documentation for `tskit`, including installation information, can be found [here](https://tskit.readthedocs.io/en/latest/introduction.html).\n",
     "\n",
-    "We'll also need the SVG module to plot our tree sequences nicely."
+    "We'll also need the `SVG` module to plot our tree sequences nicely, and the `io` package for an exercise later on."
    ]
   },
   {
@@ -173,10 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for tree in ts.trees():\n",
-    "    print(\"Tree on chromosomal interval\", tree.interval)\n",
-    "    display(SVG(tree.draw(width=500, height=150)))\n",
-    "    print()"
+    "display(SVG(ts.draw_svg()))"
    ]
   },
   {
@@ -219,8 +216,25 @@
     "### Iterating through the trees\n",
     "\n",
     "The trees in the tree sequence can be accessed in a few different different ways.\n",
-    "If you wish to access each of the trees sequentially, you can use the `trees()` iterator as we did above.\n",
-    "\n",
+    "If you wish to access each of the trees sequentially, you can use the `trees()` iterator:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for tree in ts.trees():\n",
+    "    print(\"Tree on interval\", tree.interval)\n",
+    "    display(SVG(tree.draw()))\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We can also access the tree that spans a given genomic position:"
    ]
   },
@@ -402,7 +416,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's a tree sequence file corresponding to our example above."
+    "Here's a tree sequence file corresponding to our example above.\n",
+    "By default, the `draw` method will plot each mutation on the relevant edge of the relevant tree."
    ]
   },
   {
@@ -417,6 +432,13 @@
     "    print(\"Tree on interval\", tree.interval)\n",
     "    display(SVG(tree.draw(width=500)))\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Information about mutations are stored in a `SiteTable` and a `MutationTable`:"
    ]
   },
   {
@@ -442,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Iterating through variants:"
+    "Information about the variants are stored the `variants()` iterator:"
    ]
   },
   {
@@ -459,7 +481,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All genotypes at once: (warning: this can be big!)"
+    "You can also access all genotypes at once (but beware, this can be big!)"
    ]
   },
   {
