Final changes to notebook 1, Session 1.
Final changes to notebook 1, Session 1.

--- a/Session_1/1.Introduction_to_tree_sequences.ipynb
+++ b/Session_1/1.Introduction_to_tree_sequences.ipynb
@@ -11,12 +11,8 @@
     " 1. Introduction to tree sequences (Georgia)\n",
     " 2. Introduction to simulating with `msprime` (Georgia)\n",
     " 3. Processing simulation results (Jerome)\n",
-    "\n",
-    "#### Main reference\n",
-    "\n",
-    "[1] Kelleher, J., Etheridge, A. M., & McVean, G. (2016). Efficient Coalescent Simulation and Genealogical Analysis for Large Sample Sizes. PLOS Computational Biology, 12(5), e1004842. https://doi.org/10.1371/journal.pcbi.1004842\n",
     " \n",
-    " #### Creative Commons Licence\n",
+    "#### Creative Commons Licence\n",
     " These materials were designed for SMBE Speciation 2019. They can be re-used, but please say where you got them from!\n",
     " \n",
     "#### Presenter details\n",
@@ -39,7 +35,11 @@
     " - 1.2 [Trees](#trees)\n",
     " - 1.3 [Tree sequences](#tree_sequences)\n",
     " - 1.4 [Table encoding](#table_representation)\n",
-    " - 1.5 [Storing variation](#variation)\n"
+    " - 1.5 [Storing variation](#variation)\n",
+    "\n",
+    "#### Main reference\n",
+    "\n",
+    "[1] Kelleher, J., Etheridge, A. M., & McVean, G. (2016). Efficient Coalescent Simulation and Genealogical Analysis for Large Sample Sizes. PLOS Computational Biology, 12(5), e1004842. https://doi.org/10.1371/journal.pcbi.1004842"
    ]
   },
   {
@@ -128,7 +128,7 @@
     "<a id='tree_sequences:tskit'></a>\n",
     "### tskit: a toolkit for tree sequences\n",
     "\n",
-    "`tskit` is a Python package with a bunch of useful software tools for working with tree sequences. Online documentation for `tskit`, including installation information, can be found [here](https://tskit.readthedocs.io/en/latest/introduction.html).\n",
+    "`tskit` is a Python package with a bunch of useful tools for working with tree sequences. Online documentation for `tskit`, including installation information, can be found [here](https://tskit.readthedocs.io/en/latest/introduction.html).\n",
     "\n",
     "We'll also need the `SVG` module to plot our tree sequences nicely, and the `io` package for an exercise later on."
    ]
@@ -244,7 +244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SVG(ts.at(6).draw())"
+    "tree_at_loc6 = ts.at(6)\n",
+    "SVG(tree_at_loc6.draw())"
    ]
   },
   {
@@ -253,6 +254,8 @@
    "source": [
     "<a id='table_representation'></a>\n",
     "## 1.4 Table representation\n",
+    "\n",
+    " - [Tables in tskit](#table_representation:tskit)\n",
     "\n",
     "It turns out that each tree sequence object can be entirely specified by a set of tables. Instead of storing each tree individually, each individual topological feature is stored as a row in a relevant table.\n",
     "\n",
@@ -280,6 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='table_representation:tskit'></a>\n",
     "### With tskit: TableCollections\n",
     "\n",
     "The set of tables representing a `TreeSequence` object are stored in its `tables` attribute as a `TableCollection` object. See the [official documentation](https://tskit.readthedocs.io/en/latest/python-api.html?highlight=SVG#tables) for more details."
@@ -291,7 +295,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tables = ts.tables"
+    "tables = ts.tables\n",
+    "print(tables)"
    ]
   },
   {
@@ -364,13 +369,13 @@
     "\"\"\")\n",
     "\n",
     "# Load the tree sequence.\n",
-    "ts = tskit.load_text(nodes=nodes_ex, edges=edges_ex, strict=False)\n",
+    "ts_ex = tskit.load_text(nodes=nodes_ex, edges=edges_ex, strict=False)\n",
     "\n",
-    "# # Test by plotting it.\n",
-    "# for tree in ts.trees():\n",
-    "#     print('Tree on interval:', tree.interval)\n",
-    "#     display(SVG(tree.draw()))\n",
-    "#     print()"
+    "# Test by plotting it.\n",
+    "for tree in ts_ex.trees():\n",
+    "    print('Tree on interval:', tree.interval)\n",
+    "    display(SVG(tree.draw()))\n",
+    "    print()"
    ]
   },
   {
@@ -379,6 +384,8 @@
    "source": [
     "<a id='variation'></a>\n",
     "## 1.5 Variation\n",
+    "\n",
+    " - [Mutations in tskit](#mutations:tskit)\n",
     " \n",
     "Variation is a consequence of mutations in the history of the sample. Thus, by adding some information about mutations to our tree sequences, we can use them to encode full haplotype data for each of our samples. \n",
     "\n",
@@ -409,6 +416,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='mutations:tskit'></a>\n",
     "### With tskit: mutations"
    ]
   },
@@ -448,7 +456,7 @@
    "outputs": [],
    "source": [
     "tables = ts.tables\n",
-    "print(tables.mutations)"
+    "print(tables.sites)"
    ]
   },
   {
@@ -457,7 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(tables.sites)"
+    "print(tables.mutations)"
    ]
   },
   {
@@ -499,7 +507,7 @@
    "source": [
     "**Exercise:** Trees and tree sequence objects have many useful inbuilt methods and attributes. Have a play around with these in the time before the next part of the workshop.\n",
     "\n",
-    "See the official documentation for [tree sequences](https://tskit.readthedocs.io/en/latest/python-api.html?highlight=SVG#tskit.TreeSequence) and [trees](https://tskit.readthedocs.io/en/latest/python-api.html?highlight=SVG#tskit.Tree) for a fuller description of these."
+    "See the official documentation for [tree sequences](https://tskit.readthedocs.io/en/latest/python-api.html?highlight=SVG#tskit.TreeSequence) and [trees](https://tskit.readthedocs.io/en/latest/python-api.html?highlight=SVG#tskit.Tree)."
    ]
   },
   {
